--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:windowActionBarOverlay">true</item>
+        <!-- Support Action Bar -->
+        <item name="windowActionBarOverlay">true</item>
+
     </style>
 
 </resources>
