--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+
+    </style>
+
+    <style name="ActionBarOverlay" parent="AppTheme">
         <item name="android:windowActionBarOverlay">true</item>
         <!-- Support Action Bar -->
         <item name="windowActionBarOverlay">true</item>
-
     </style>
 
 </resources>
