--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -54,7 +54,6 @@
                     android:src="@drawable/appointments"
                     android:padding="20dp"
                     android:layout_margin="0dp"
-                    android:layout_above="@+id/appointmentTextView"
                     android:background="#00000000"
                     />
                 <TextView
@@ -84,7 +83,6 @@
                     android:adjustViewBounds="true"
                     android:src="@drawable/resources"
                     android:padding="20dp"
-                    android:layout_weight="1"
                     android:layout_margin="0dp"
                     android:background="#00000000"/>
                 <TextView
@@ -172,6 +170,7 @@
             android:id="@+id/socialButtons"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal">
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -188,6 +187,7 @@
                 android:src="@drawable/facebook"
                 android:background="#00000000"
                 android:layout_centerInParent="true"
+                android:layout_toLeftOf="@+id/youtubeButton"
                 android:padding="10dp"/>
 
             <ImageButton
@@ -196,7 +196,23 @@
                 android:id="@+id/youtubeButton"
                 android:src="@drawable/youtube"
                 android:background="#00000000"
-                android:layout_toRightOf="@+id/facebookButton"
+                android:layout_centerInParent="true"
+                android:padding="10dp"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/phoneButton"
+                android:src="@drawable/ic_phone_white_18dp"
+                android:background="#00000000"
+                android:layout_toRightOf="@+id/youtubeButton"
+                android:padding="10dp"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/emailButton"
+                android:src="@drawable/ic_email_white_18dp"
+                android:background="#00000000"
+                android:layout_toRightOf="@+id/phoneButton"
                 android:padding="10dp"/>
         </RelativeLayout>
 
