Redesigned FAQ/Resources Page Reworked a bunch of pngs into being smaller

--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <ImageView android:id="@+id/customGroupIndicator"
+          android:paddingLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
+          android:layout_height="wrap_content"
+          android:layout_width="wrap_content"
+          android:layout_gravity="center_vertical"/>
+
+
     <TextView
         android:id="@+id/listTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="#A4C739"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
 </LinearLayout>
