--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -2,16 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.sjsu.writingcenter.FAQActivity">
+    tools:context="edu.sjsu.writingcenter.FAQActivity"
+    android:background="@drawable/background_gradient"
+    android:paddingTop="?attr/actionBarSize">
 
     <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/FAQExpandableListView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+        android:divider="#FFFFFF"
+        android:dividerHeight="0.5dp"
+        android:childDivider="#00000000"/>
 </RelativeLayout>
