--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -2,15 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.sjsu.writingcenter.ResourcesActivity">
+    tools:context="edu.sjsu.writingcenter.ResourcesActivity"
+    android:background="@drawable/background_gradient"
+    android:paddingTop="?attr/actionBarSize">
 
     <ExpandableListView
         android:id="@+id/expandableListView"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="#A4C739"
-        android:dividerHeight="0.5dp" />
+        android:divider="#FFFFFF"
+        android:dividerHeight="0.5dp"
+        android:childDivider="#FFFFFF"/>
 </RelativeLayout>
