--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -144,7 +144,7 @@
                         android:layout_weight="1"
                         android:background="#00000000"
                         android:layout_above="@+id/locationTextView"
-                        android:layout_centerHorizontal="true"/>
+                        android:layout_centerInParent="true"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
