--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -2,48 +2,30 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="?attr/actionBarSize"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="edu.sjsu.writingcenter.LocationActivity"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:background="@drawable/background_gradient">
 
-    <Button
+
+    <WebView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find Clark Hall"
-        android:id="@+id/button1"
-        android:checked="false"
-        android:onClick="onClick"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="invisible" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Find Writing Center"
-        android:id="@+id/button2"
-        android:layout_alignParentTop="true"
+        android:id="@+id/mapView"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/mapToggle"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="onClick" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
-    <ImageView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView1"
-        android:src="@drawable/campusmap"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/clarkfloorplan"
-        android:visibility="invisible" />
-
+        android:id="@+id/mapToggle"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/mapView"
+        android:layout_alignEnd="@+id/mapView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
